--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="#contact" class="button-contact"><i aria-label="お問い合わせ" class="fa fa-envelope"></i></a>
             <div class="profile">
                 <h1 class="site-title abel uppercase text-center">Web Designer <span>Shiori Suzuki</span></h1>
-                <img src="./images/mypic.jpg" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
+                <img src="./images/profile.jpg" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
                 <p>名古屋在住のWebデザイナー、鈴木詩織です。オンラインスクールでWeb制作について学び、不動産業界から憧れていたWebデザイナーへと転職活動中です。これからさらにWeb制作の技術や知識を身につけて、Webサイト運用や問題解決のアドバイスもできるデザイナーになりたいと思っています。</p>
             </div>
         </header>
@@ -44,7 +44,7 @@
                 <h2 class="text-center">Works</h2>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <img src="./images/build.jpg" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>株式会社きらめき コーポレートサイト</h3>
@@ -68,11 +68,11 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+                <img src="./images/interior.jpg" alt="WordPressオリジナルテーマ">
                 <div class="works-box-inner">
                     <div class="text-center">
-                        <h3>ブログデザイン</h3>
-                        <small>2016.04.20</small>
+                        <h3>鈴木邸空間プラン</h3>
+                        <small>2016.06.20</small>
                         <span class="button-readmore">Read More</span>
                     </div>
                 </div>
@@ -93,11 +93,11 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+                <img src="./images/interior.jpg" alt="WordPressオリジナルテーマ">
                 <div class="works-box-inner">
                     <div class="text-center">
-                        <h3>ブログデザイン</h3>
-                        <small>2016.04.20</small>
+                        <h3>鈴木邸空間プラン</h3>
+                        <small>2016.06.20</small>
                         <span class="button-readmore">Read More</span>
                     </div>
                 </div>
@@ -141,11 +141,11 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+                <img src="./images/interior.jpg" alt="WordPressオリジナルテーマ">
                 <div class="works-box-inner">
                     <div class="text-center">
-                        <h3>ブログデザイン</h3>
-                        <small>2016.04.20</small>
+                        <h3>鈴木邸空間プラン</h3>
+                        <small>2016.06.20</small>
                         <span class="button-readmore">Read More</span>
                     </div>
                 </div>
