--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>株式会社きらめき コーポレートサイト</h3>
-                        <small>2016.04.20</small>
+                        <small>2016.06.20</small>
                         <span class="button-readmore">Read More</span>
                     </div>
                 </div>
@@ -56,11 +56,11 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_card.jpg" alt="きらめき花子様 名刺デザイン">
+                <img src="./images/businesscard.jpg" alt="きらめき花子様 名刺デザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>きらめき花子様 名刺</h3>
-                        <small>2016.04.20</small>
+                        <small>2016.06.20</small>
                         <span class="button-readmore">Read More</span>
                     </div>
                 </div>
@@ -71,7 +71,7 @@
                 <img src="./images/interior.jpg" alt="WordPressオリジナルテーマ">
                 <div class="works-box-inner">
                     <div class="text-center">
-                        <h3>鈴木邸空間プラン</h3>
+                        <h3>ブログデザイン</h3>
                         <small>2016.06.20</small>
                         <span class="button-readmore">Read More</span>
                     </div>
@@ -81,22 +81,10 @@
         
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_card.jpg" alt="きらめき花子様 名刺デザイン">
+                <img src="./images/businesscard.jpg" alt="きらめき花子様 名刺デザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>きらめき花子様 名刺</h3>
-                        <small>2016.04.20</small>
-                        <span class="button-readmore">Read More</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="works-box">
-            <a href="#">
-                <img src="./images/interior.jpg" alt="WordPressオリジナルテーマ">
-                <div class="works-box-inner">
-                    <div class="text-center">
-                        <h3>鈴木邸空間プラン</h3>
                         <small>2016.06.20</small>
                         <span class="button-readmore">Read More</span>
                     </div>
@@ -105,11 +93,11 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <img src="./images/interior.jpg" alt="WordPressオリジナルテーマ">
                 <div class="works-box-inner">
                     <div class="text-center">
-                        <h3>株式会社きらめき コーポレートサイト</h3>
-                        <small>2016.04.20</small>
+                        <h3>ブログデザイン</h3>
+                        <small>2016.06.20</small>
                         <span class="button-readmore">Read More</span>
                     </div>
                 </div>
@@ -117,11 +105,11 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <img src="./images/build.jpg" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>株式会社きらめき コーポレートサイト</h3>
-                        <small>2016.04.20</small>
+                        <small>2016.06.20</small>
                         <span class="button-readmore">Read More</span>
                     </div>
                 </div>
@@ -129,11 +117,23 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_card.jpg" alt="きらめき花子様 名刺デザイン">
+                <img src="./images/build.jpg" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <div class="works-box-inner">
+                    <div class="text-center">
+                        <h3>株式会社きらめき コーポレートサイト</h3>
+                        <small>2016.06.20</small>
+                        <span class="button-readmore">Read More</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="works-box">
+            <a href="#">
+                <img src="./images/businesscard.jpg" alt="きらめき花子様 名刺デザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>きらめき花子様 名刺</h3>
-                        <small>2016.04.20</small>
+                        <small>2016.06.20</small>
                         <span class="button-readmore">Read More</span>
                     </div>
                 </div>
@@ -144,7 +144,7 @@
                 <img src="./images/interior.jpg" alt="WordPressオリジナルテーマ">
                 <div class="works-box-inner">
                     <div class="text-center">
-                        <h3>鈴木邸空間プラン</h3>
+                        <h3>ブログデザイン</h3>
                         <small>2016.06.20</small>
                         <span class="button-readmore">Read More</span>
                     </div>
